infra/k8s-prod/api-phpmyadmin-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-phpmyadmin-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api-phpmyadmin
  template:
    metadata:
      labels:
        app: api-phpmyadmin
    spec:
      containers:
        - name: api-phpmyadmin
          image: phpmyadmin/phpmyadmin
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: api-phpmyadmin-srv
spec:
  selector:
    app: api-phpmyadmin
  ports:
    - name: db
      protocol: TCP
      port: 80
      targetPort: 80
