infra/k8s-prod/ingress-srv.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: "true"
    cert-manager.io/cluster-issuer: "letsencrypt-staging"
spec:
  rules:
    # プロダクションのdomain name
    - host: www.himawarigumi.xyz
      http:
        paths:
          - path: /api/node/users/?(.*)
            backend:
              serviceName: node-srv
              servicePort: 3000
          # ingress-nginxは、上からマッチするルートが選ばれる
          # client-srvは最後に置くこと！
          - path: /?(.*)
            backend:
              serviceName: client-srv
              servicePort: 3000
